<resources>
    <string name="app_name">Challenger</string>
    <string name="signUp_text">You aren\'t connected yet?</string>
    <string name="signUp_activity">sign up</string>
    <string name="signUp_text_2">in a few secs</string>
    <string name="email_text">Email</string>
    <string name="pw_text">Password</string>
    <string name="signIn_text">Sign in</string>
    <string name="email_vergl_text">Repeat Email</string>
    <string name="back_activity">Back</string>
    <string name="signUp_title">SIGN UP</string>
    <string name="signUp_subtitle">This will just take a few seconds \n Please fill in the following information</string>
</resources>
